--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,12 @@
   </head>
 
 
-  <body class ="d-flex flex-row bd-highlight mb-3">
+  <body>
     <header class = "shadow-sm">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <div>
-            <ul class="navbar-nav ml-auto">
+          <div class="ml-auto">
+            <ul class="navbar-nav ml-auto" >
             <% if customer_signed_in? %>
               <li class = nav-item>
                 <%= link_to "マイページ", customer_path, class: "btn btn-sm btn-light" %>
@@ -63,7 +63,7 @@
                 </button>
               </li>
               <li class="nav-item">
-                <button type="button" class="btn btn-outline-secondary", style="margin: 20px;">
+                <button type="button" class="btn btn-outline-secondary mr-sm-2", style="margin: 20px;">
                  <%= link_to "ログイン", new_customer_session_path, class:"nav-link btn" %>
                 </button>
               </li>
