--- a/app/views/customer/registrations/new.html.erb
+++ b/app/views/customer/registrations/new.html.erb
@@ -1,29 +1,67 @@
-<h2>Sign up</h2>
+<h2>新規会員登録</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "customer/shared/error_messages", resource: resource %>
+<div class="container">
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "customer/shared/error_messages", resource: resource %>
+
+    <div class="row">
+      <div class="col-md-8">
+              <div class="field">
+                <%= f.label :名前 %>
+                <%= f.label :（姓） %>
+                <%= f.text_field :first_name, autofocus: true, autocomplete: "(姓)", placeholder: "令和" %>
+                <%= f.label :（名） %>
+                <%= f.text_field :last_name, autofocus: true, autocomplete: "(名)", placeholder: "道子" %>
+              </div>
+
+              <div class="field">
+                <%= f.label :フリガナ %>
+                <%= f.label :（セイ） %>
+                <%= f.text_field :first_name_kana, autofocus: true, autocomplete: "(セイ)", placeholder: "レイワ" %>
+                <%= f.label :（メイ） %>
+                <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "(メイ)", placeholder: "ミチコ" %>
+              </div>
+
+              <div class="field">
+                <%= f.label :メールアドレス %>
+                <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "sample@example.com" %>
+              </div>
+
+               <div class="field">
+                <%= f.label :郵便番号（ハイフンなし） %>
+                <%= f.text_field :phone_number, autofocus: true, autocomplete: "郵便番号", placeholder: "0000000" %>
+              </div>
+
+              <div class="field">
+                <%= f.label :住所 %>
+                <%= f.text_field :postcode, autofocus: true, autocomplete: "住所", placeholder: "東京都渋谷区代々木神園町0－0" %>
+              </div>
+
+              <div class="field">
+                <%= f.label :電話番号（ハイフンなし） %>
+                <%= f.text_field :phone_number, autofocus: true, autocomplete: "電話番号", placeholder: "00000000000" %>
+              </div>
+
+              <div class="field">
+                <%= f.label :パスワード（6文字以上） %>
+                <%# if @minimum_password_length %>
+               <!--<em>(<%#= @minimum_password_length %> characters minimum)</em>-->
+               <%# end %>
+                <%= f.password_field :password, autocomplete: "new-password" %>
+              </div>
+
+              <div class="field">
+                <%= f.label :パスワード（確認用）%>
+                <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+              </div>
+
+              <div class="actions">
+                <%= f.submit "Sign up" %>
+              </div>
+      </div>
+    <% end %>
+
+    <%= render "customer/shared/links" %>
+
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "customer/shared/links" %>
