--- a/app/views/customer/registrations/new.html.erb
+++ b/app/views/customer/registrations/new.html.erb
@@ -1,67 +1,137 @@
-<h2>新規会員登録</h2>
 
 <div class="container">
+  <div style="margin: 30px;">
+    <span style="font-size:20px;background-color:#dcdcdc">新規会員登録</span>
+  </div>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "customer/shared/error_messages", resource: resource %>
 
     <div class="row">
-      <div class="col-md-8">
-              <div class="field">
+      <div class="col-md">
+        <form>
+          <table>
+            <tr>
+              <td>
                 <%= f.label :名前 %>
+              </td>
+              <td>
                 <%= f.label :（姓） %>
+              </td>
+              <td>
                 <%= f.text_field :first_name, autofocus: true, autocomplete: "(姓)", placeholder: "令和" %>
+
                 <%= f.label :（名） %>
+
                 <%= f.text_field :last_name, autofocus: true, autocomplete: "(名)", placeholder: "道子" %>
-              </div>
+              </td>
+            </tr>
 
-              <div class="field">
+            <tr>
+              <td>
                 <%= f.label :フリガナ %>
+              </td>
+              <td>
                 <%= f.label :（セイ） %>
+              </td>
+              <td>
                 <%= f.text_field :first_name_kana, autofocus: true, autocomplete: "(セイ)", placeholder: "レイワ" %>
+
                 <%= f.label :（メイ） %>
+
                 <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "(メイ)", placeholder: "ミチコ" %>
-              </div>
+              </td>
+            </tr>
 
-              <div class="field">
+            <tr>
+              <td>
                 <%= f.label :メールアドレス %>
+              </td>
+              <td>
+              </td>
+              <td>
                 <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "sample@example.com" %>
-              </div>
+              </td>
+            </tr>
 
-               <div class="field">
+            <tr>
+              <td>
                 <%= f.label :郵便番号（ハイフンなし） %>
+              </td>
+              <td></td>
+              <td>
                 <%= f.text_field :phone_number, autofocus: true, autocomplete: "郵便番号", placeholder: "0000000" %>
-              </div>
+              </td>
 
-              <div class="field">
+            </tr>
+
+            <tr>
+              <td>
                 <%= f.label :住所 %>
-                <%= f.text_field :postcode, autofocus: true, autocomplete: "住所", placeholder: "東京都渋谷区代々木神園町0－0" %>
-              </div>
+              </td>
+              <td>
+              </td>
+              <td>
+                <%= f.text_field :postcode, autofocus: true, autocomplete: "住所", placeholder: "東京都渋谷区代々木神園町0－0", size: "60x5" %>
+              </td>
 
-              <div class="field">
+            </tr>
+
+            <tr>
+              <td>
                 <%= f.label :電話番号（ハイフンなし） %>
+              </td>
+              <td>
+              </td>
+              <td>
                 <%= f.text_field :phone_number, autofocus: true, autocomplete: "電話番号", placeholder: "00000000000" %>
-              </div>
+              </td>
+            </tr>
 
-              <div class="field">
+            <tr>
+              <td>
                 <%= f.label :パスワード（6文字以上） %>
+              </td>
                 <%# if @minimum_password_length %>
                <!--<em>(<%#= @minimum_password_length %> characters minimum)</em>-->
                <%# end %>
+              <td>
+              </td>
+              <td>
                 <%= f.password_field :password, autocomplete: "new-password" %>
-              </div>
+              </td>
 
-              <div class="field">
+            </tr>
+
+            <tr>
+              <td>
                 <%= f.label :パスワード（確認用）%>
+              </td>
+              <td>
+              </td>
+              <td>
                 <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-              </div>
+              </td>
 
-              <div class="actions">
-                <%= f.submit "Sign up" %>
-              </div>
+            </tr>
+
+            <tr>
+              <td></td>
+              <td></td>
+              <td>
+                <div>
+                  <%= f.submit "新規登録", class: "btn btn-block btn-sm btn-success" %>
+                </div>
+              </td>
+            </tr>
+          </table>
+
+          <%= render "customer/shared/links" %>
+
+        </form>
       </div>
     <% end %>
 
-    <%= render "customer/shared/links" %>
+
 
   </div>
