--- a/app/views/customer/shared/_links.html.erb
+++ b/app/views/customer/shared/_links.html.erb
@@ -1,5 +1,13 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <div style="margin: 30px;">
+    <span style="font-size:20px;background-color:#dcdcdc">既に登録済みの方</span><br />
+    <div style="margin: 30px;">
+    <%= link_to "こちら", new_session_path(resource_name) %>
+
+    からログインしてください。
+    </div>
+  </div>
+
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
