--- a/app/views/customer/registrations/new.html.erb
+++ b/app/views/customer/registrations/new.html.erb
@@ -60,7 +60,7 @@
               </td>
               <td></td>
               <td>
-                <%= f.text_field :phone_number, autofocus: true, autocomplete: "郵便番号", placeholder: "0000000" %>
+                <%= f.text_field :postcode, autofocus: true, autocomplete: "郵便番号", placeholder: "0000000" %>
               </td>
 
             </tr>
@@ -72,7 +72,7 @@
               <td>
               </td>
               <td>
-                <%= f.text_field :postcode, autofocus: true, autocomplete: "住所", placeholder: "東京都渋谷区代々木神園町0－0", size: "60x5" %>
+                <%= f.text_field :address, autofocus: true, autocomplete: "住所", placeholder: "東京都渋谷区代々木神園町0－0", size: "60x5" %>
               </td>
 
             </tr>
