会員情報一覧修正

--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -18,7 +18,7 @@
           <%= customer.id %>
         </td>
         <td>
-          <%= f.collection_select :customer_id, @customers, :id, :full_name %>
+          <%= customer.full_name %>
         </td>
         <td><%= customer.email %></td>
         <td><%= customer.is_deleted %></td>
