--- a/app/views/customer/registrations/new.html.erb
+++ b/app/views/customer/registrations/new.html.erb
@@ -60,7 +60,7 @@
               </td>
               <td></td>
               <td>
-                <%= f.text_field :phone_number, autofocus: true, autocomplete: "郵便番号", placeholder: "0000000" %>
+                <%= f.text_field :postcode, autofocus: true, autocomplete: "郵便番号", placeholder: "0000000" %>
               </td>
 
             </tr>
