--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
                 <%= link_to "カート", cart_items_path, class: "btn btn-sm btn-light" %>
               </li>
               <li>
-                <%= link_to "ログアウト", root_path, class: "btn btn-sm btn-light" %>
+                <%= link_to "ログアウト", destroy_customer_session_path, class: "btn btn-sm btn-light", method: :delete %>
               </li>
             <% elsif admin_signed_in? %>
               <li class = nav-item>
@@ -39,13 +39,13 @@
                 <%= link_to "会員一覧", admin_customers_path, class: "btn btn-sm btn-light" %>
               </li>
               <li class = nav-item>
-                <%= link_to "注文履歴一覧", admin__path, class: "btn btn-sm btn-light" %>
+                <%= link_to "注文履歴一覧", admin_orders_path, class: "btn btn-sm btn-light" %>
               </li>
               <li class = nav-item>
                 <%= link_to "ジャンル一覧", admin_genres_path, class: "btn btn-sm btn-light" %>
               </li>
               <li class = nav-item>
-                <%= link_to "ログアウト", destroy_admin_session_path, class: "btn btn-sm btn-light" %>
+                <%= link_to "ログアウト", destroy_admin_session_path, class: "btn btn-sm btn-light", method: :delete %>
               </li>
             <% else %>
               <li class="nav-item">
