--- a/app/views/customer/customers/show.html.erb
+++ b/app/views/customer/customers/show.html.erb
@@ -8,7 +8,7 @@
           <h4 style="margin:auto;"><strong>登録情報</strong></h4>
         </td>
         <td>
-          <%= link_to "編集する", edit_customers_path, class: "btn btn-sm btn-success"%>
+          <%= link_to "編集する", customers_mypage_edit_path, class: "btn btn-sm btn-success"%>
         </td>
       </tr>
     </table>
