--- a/app/views/customer/homes/top.html.erb
+++ b/app/views/customer/homes/top.html.erb
@@ -1,1 +1,50 @@
-<p>top</p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-xs-2">
+      <table border="1" style="margin-top:30px;border-collapse: collapse;">
+        <thead>
+          <tr border="2" style="padding:30px;border-collapse: collapse;">
+            <th><p>ジャンル検索</p></th>
+          </tr>
+        </thead>
+        <tbody>
+        <% @genres.each do |genre| %>
+          <tr>
+            <td>
+              <%= genre.name %>
+            </td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-xs-9">
+      <div style="margin-left:50px;;width:500px;">
+
+          <p style="text-align: left;margin-top: 200px;margin-bottom: 80px;border:thin solid #000000;">
+            ようこそ、ながのCAKEへ！<br>
+            このサイトは、ケーキ販売のECサイトになります。<br>
+            会員でない方も商品の閲覧はできますが、<br>
+            購入には会員登録が必要となります。<br>
+          </p>
+
+      </div>
+      <div style="font-size:30px;">
+        新着商品
+      </div>
+      <div class="col-xs-9 col-xs-offset-1">
+        <div class="item--card-content">
+          <% @items.last(4).each do |item| %>
+            <div class="col-xs-3" style="padding-right: 0px; padding-left: 0px;">
+              <%= link_to item_path(item.id) do %>
+                <%= attachment_image_tag item, :fill, 180, 125, format: 'jpeg' %><br>
+                <%= item.name %><br>
+                ¥<%= item.price.to_s(:delimited, delimiter: ',') %>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
