--- a/app/views/customer/orders/index.html.erb
+++ b/app/views/customer/orders/index.html.erb
@@ -15,11 +15,16 @@
   </thead>
   
   <tbody>
-    <%= @orders.each do |order| %>
+    <% @orders.each do |order| %>
       <tr>
         <td><%= order.created_at %></td> 
         <td><%= order.delivery %></td>
-        <!--<td><%= order.注文商品名 %></td>-->
+          <% @order_items = order.order_items %>
+        <td>
+          <% @order_items.each do |order_item| %>
+          <%= order_item.item.name %>
+          <% end %>
+        </td>
         <td><%= order.total_payment %></td>
         <td><%= order.status %></td>
         <td><%= link_to '表示する', order_path, class:"btn btn-primary" %></td>
