--- a/app/views/customer/orders/show.html.erb
+++ b/app/views/customer/orders/show.html.erb
@@ -7,48 +7,44 @@
     <table border="1">
       <caption style="margin-rigth: auto;">注文情報</caption>
       
-        <%= @order.each do |f| %> 
             <tr>
               <th style="background-color: #dcdcdc">注文日</th>
-              <td><%= f.created_at %></td>
+              <td><%= @order.created_at %></td>
             </tr>
             
             <tr>
               <th>配送先</th>
-              <td><%= f.delivery %></td>
+              <td><%= @order.delivery %></td>
             </tr>
             
             <tr>
               <th>支払方法</th>
-              <td><%= f.payment %></td>
+              <td><%= @order.payment %></td>
             </tr>
             
             <tr>
               <th>ステータス</th>
-              <td><%= f.status %></td>
+              <td><%= @order.status %></td>
             </tr>
-        <% end %>
     </table>
     
     <table border="1">
       <caption style="margin-rigth: auto;">請求情報</caption>
       
-        <%= @order.each do |f| %>
         　　<tr>
         　　  <th style="background-color: #dcdcdc">商品合計</th>
-        　　  <td><%= f.price_intax %></td>
+           　<!--<td><%= @order.total_payment - @orderpostage %></td>-->
         　　</tr>
         　　
         　　<tr>
         　　  <th>配送料</th>
-        　　  <td><%= f.postage %></td>
+            <td><% @order.postage %></td>
         　　</tr>
         　　
         　　<tr>
         　　  <th><strong>ご請求額</strong></th>
-        　　  <td><%= f.total_payment %></td>
+            <td><%= @order.total_payment %></td>
         　　</tr>
-        <% end %>
     </table>
 </table>
 
@@ -57,7 +53,7 @@
   
   <thead>
     <tr>
-      <th>商品</th>
+      <th style="background-color: #dcdcdc">商品</th>
       <th>単価（税込）</th>
       <th>個数</th>
       <th>小計</th>
@@ -65,12 +61,11 @@
   </thead>
   
   <tbody>
-    <%= @order.each do |f| %>
       <tr>
-        <td><%= f. %></td>
-        <td><%= f.price + "f.price*0.1" %></td>
-        <td></td>
-        <td
+        <td><%= @order_item.item.name %></td>
+        <td><%= @order_item.price_intax %></td>
+        <td><%= @order_item.quantity %></td>
+        <!--<td><%= @order_items.'price_intax*quantity' %></td>-->
       </tr>
   </tbody>
 </table>
