--- a/app/views/customer/orders/show.html.erb
+++ b/app/views/customer/orders/show.html.erb
@@ -33,7 +33,7 @@
       
         　　<tr>
         　　  <th style="background-color: #dcdcdc">商品合計</th>
-           　<!--<td><%= @order.total_payment - @orderpostage %></td>-->
+           　<!--<td><%= @order.total_payment - @order.postage %></td>-->
         　　</tr>
         　　
         　　<tr>
@@ -68,4 +68,5 @@
         <!--<td><%= @order_items.'price_intax*quantity' %></td>-->
       </tr>
   </tbody>
+  
 </table>
