--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -25,7 +25,7 @@
 
             <tr>
               <td><%= f.label :ジャンル %></td>
-              <td><%= f.select :genre_id, options_for_select([['ジャンルを選択してください', ''], ['ケーキ', '1'], ['プリン', '2'], ['焼き菓子', '3'], ['キャンディ', '4']]), {}, {class: 'genre__select'} %><%#= f.text_field :genre_id, autofocus: true, size: "60x5" %></td>
+              <td><%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: "--選択して下さい--" %></td>
             </tr>
 
             <tr>
@@ -36,9 +36,9 @@
             <tr>
               <td><%= f.label :販売ステータス %></td>
               <td>
-                <%= f.radio_button :is_active, '1' %>
+                <%= f.radio_button :is_active, '販売中' %>
                 <%= f.label :is_active, '販売中', value: 1 %>
-                <%= f.radio_button :is_active, '0' %>
+                <%= f.radio_button :is_active, '販売停止中' %>
                 <%= f.label :is_active, '販売停止中', value: 0 %>
               </td>
             </tr>
