--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -3,30 +3,30 @@
 </span>
 
 
-<%= attachment_image_tag item,:profile_image, :size =>'60x60'%>
+<%= attachment_image_tag @item,:image, :size =>'60x60'%>
 
 <table border="0">
-    
+
   <tr>
     <th>商品名</th>
     <td><%= @item.name %></td>
   </tr>
-  
+
   <tr>
     <th>商品説明</th>
     <td><%= @item.introduction %></td>
   </tr>
-  
+
   <tr>
     <th>ジャンル</th>
     <td><%= @item.genre.name %></td>
   </tr>
-  
+
   <tr>
     <th>税込価格</br>
         （税抜価格）
     </th>
     <td><%= @item.price*1.1 %></td>
   </tr>
-  
+
 </table>
