--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,9 +1,13 @@
-<span style="font-size: 20px; background-color: #dcdcdc">
-    商品詳細
-</span>
-
-
-<%= attachment_image_tag @item,:image, :size =>'60x60'%>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <span style="font-size: 20px; background-color: #dcdcdc">
+          商品詳細
+      </span>
+      <div>
+        <%= attachment_image_tag @item,:image, :size =>'300x300'%>
+      </div>
+    </div>
 
 <table border="0">
 
@@ -19,8 +23,6 @@
 
   <tr>
     <th>ジャンル</th>
-    <!--<%# @genres = @item.genre_id %>-->
-    <!--<td><%#= @genres.genre.name %></td>-->
     <td><%= @item.genre.name %></td>
   </tr>
 
@@ -39,5 +41,7 @@
   <caption>
     <%= link_to '編集する', edit_admin_item_path, class:"btn btn-success" %>
   </caption>
-
-</table>
+ </table>
+ 
+  </div>
+</div>
