--- a/app/views/customer/orders/show.html.erb
+++ b/app/views/customer/orders/show.html.erb
@@ -65,7 +65,7 @@
         <td><%= @order_item.item.name %></td>
         <td><%= @order_item.price_intax %></td>
         <td><%= @order_item.quantity %></td>
-        <!--<td><%= @order_items.'price_intax*quantity' %></td>-->
+        <td><%= @order_items.price_intax*quantity %></td>
       </tr>
   </tbody>
   
