--- a/app/views/customer/homes/top.html.erb
+++ b/app/views/customer/homes/top.html.erb
@@ -37,7 +37,7 @@
           <% @items.last(4).each do |item| %>
             <div class="col-xs-3" style="padding-right: 0px; padding-left: 0px;">
               <%= link_to item_path(item.id) do %>
-                <%= attachment_image_tag item, :fill, 180, 125, format: 'jpeg' %><br>
+                <%#= attachment_image_tag item, :fill, 180, 125, format: 'jpeg' %><br>
                 <%= item.name %><br>
                 ¥<%= item.price.to_s(:delimited, delimiter: ',') %>
               <% end %>
