--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -3,7 +3,7 @@
   <span style="font-size:20px;background-color:#dcdcdc;padding:0px 15px;">商品一覧</span>
 </div>
 <div style="margin-left: 80%;margin-bottom: 20px;">
-  <%= link_to "＋", edit_admin_item_path(@items), { :class => "btn btn-sm btn-outline-secondary", :style => "border-radius: 50%;width: 50px;height: auto;padding: 10px;font-size:20px;"} %>
+ <%= link_to "＋", new_admin_item_path(@items), class:"btn btn-sm btn-outline-secondary" %>
 </div>
 <table style="margin-left: 20%;margin-right: 15%;">
   <thead>
