--- a/app/views/customer/homes/top.html.erb
+++ b/app/views/customer/homes/top.html.erb
@@ -29,17 +29,16 @@
           </p>
 
       </div>
-      <div style="font-size:30px;">
-        新着商品
+      <div style="margin-bottom: 20px;">
+        <strong style="font-size:30px;">
+         新着商品
+        </strong>
       </div>
-      <div class="col-xs-9 col-xs-offset-1">
-        <div class="item--card-content">
+       <div  style="display: flex; flex-wrap: wrap;">
           <% @items.last(4).each do |item| %>
-            <div class="col-xs-3" style="padding-right: 0px; padding-left: 0px;">
+            <div class="box" style="width: 200px; margin-right: 20px;">
               <%= link_to item_path(item.id) do %>
-
-                <%= attachment_image_tag item, :image, :fill, 100, 100, format: 'jpeg' %><br>
-
+                <%= attachment_image_tag item, :image, :fill, 200, 150, format: 'jpeg' %><br>
                 <%= item.name %><br>
                 ¥<%= item.price.to_s(:delimited, delimiter: ',') %>
               <% end %>
