--- a/app/views/customer/cart_items/index.html.erb
+++ b/app/views/customer/cart_items/index.html.erb
@@ -31,6 +31,10 @@
 
         </td>
       </tr>
+
     <% end %>
+     <div>
+        ¥<%= @total.round.to_s(:delimited) %>
+      </div>
   </tbody>
 </table>
