--- a/app/views/customer/cart_items/index.html.erb
+++ b/app/views/customer/cart_items/index.html.erb
@@ -25,12 +25,7 @@
           <%= cart_items.item.price * 1.1.round %>
         </td>
         <td>
-          <%= form_with model:cart_items, url:cart_item_path(cart_items.id), method: :patch, local:true do |f| %>
-                <p>
-                  <%= f.select :quantity, [['1',1], ['2',2], ['3',3]] %>
-                  <%= f.submit "変更", class: "btn btn-primary" %>
-                </p>
-          <% end %>
+          <%= cart_items.quantity %>
         </td>
         <td>
           <%= cart_items.item.price * 1.1.round * cart_items.quantity %>
@@ -39,14 +34,14 @@
           <%= link_to '削除する', cart_item_path(cart_items.id), method: :delete, "date-confirm" => "本当に削除しますか", class: "btn btn-success" %>
         </td>
       </tr>
-
     <% end %>
-     <div>
-        ¥<%= @total.round.to_s(:delimited) %>
-      </div>
   </tbody>
 </table>
 
      <div>
       <%= link_to '買い物を続ける', root_path, class:'btn btn-primary' %>
+     </div>
+     
+     <div>
+       
      </div>
