--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -24,7 +24,7 @@
           <%= item.id %>
         </td>
         <td>
-          <%= link_to admin_items_path(item.id) do %>
+          <%= link_to admin_item_path(item.id) do %>
           <%= item.name %>
           <% end %>
         </td>
