--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -18,10 +18,19 @@
           <%= customer.id %>
         </td>
         <td>
+          <%= link_to admin_customer_path(customer.id) do %>
           <%= customer.full_name %>
+          <% end %>
         </td>
         <td><%= customer.email %></td>
-        <td><%= customer.is_deleted %></td>
+        <td>
+          <% if customer.is_deleted == true %>
+          <p>退会</p>
+          <% else %>
+          <p>有効</p>
+          <% end %>
+        </td>
+       
       </tr>
     <% end %>
   </tbody>
