--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -105,7 +105,11 @@
  </td>
  <td>
   <div>
-    <%= @customer.is_deleted %>
+    <% if @customer.is_deleted == true %>
+      <p>退会</p>
+      <% else %>
+      <p>有効</p>
+      <% end %>
   </div>
  </td>
 </tr>
