--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -24,7 +24,7 @@
           <%= item.id %>
         </td>
         <td>
-          <%= link_to admin_items_path(item.id) do %>
+          <%= link_to admin_item_path(item.id) do %>p
           <%= item.name %>
           <% end %>
         </td>
@@ -35,7 +35,11 @@
           <%= item.genre.name %>
         </td>
         <td>
-          <%= item.is_active %>
+          <% if item.is_active == true %>
+            <p>販売中</p>
+            <% else %>
+            <p>販売停止中</p>
+          <% end %>
         </td>
       </tr>
     <% end %>
