--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -35,7 +35,13 @@
 
   <tr>
     <th>販売ステータス</th>
-    <td><%= @item.is_active %></td>
+    <td>
+      <% if @item.is_active == true %>
+        <p>販売中</p>
+        <% else %>
+        <p>販売停止中</p>
+      <% end %>
+    </td>
   </tr>
 
   <caption>
