--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,8 +1,6 @@
 <span style="font-size: 20px; background-color: #dcdcdc">
     注文履歴詳細
 </span>
-
-<table border="0">
     <table border="1">
         
         　　<tr>
@@ -35,11 +33,56 @@
               <td> 
                <%= form_with model:@order, url:admin_order_path, method: :patch, local:true do |f| %>
                 <%= f.select :status, [['入金待ち',"wait"], ['入金確認',"confirm"], ['制作中',"make"],['配送準備中',"ready"],['配送済み',"complete"]] %>
-                <%#= f.hidden_field :item_id, :value => @item.id %>
                 <%= f.submit "更新", class: "btn btn-lg btn-success" %>
                <% end %>
-                
               </td>
             </tr>
+    </table>
+    
+  <table>
+    <thead style="background-color: #dcdcdc">
+    <tr>
+      <th>商品名</th>
+      <th>単価（税込）</th>
+      <th>数量</th>
+      <th>小計</th>
+      <th>制作ステータス</th>
+    </tr>
+  </thead>
+  <% @order_item.each do |order| %>
+    <tbody>
+        <tr>
+          <td><%= order.item.name %></td>
+          <td><%= order.price_intax %></td>
+          <td><%= order.quantity %></td>
+          <td><%= order.price_intax*order.quantity %></td>
+          <td>
+            <%= form_with model:order, url:admin_order_item_path, method: :patch, local:true do |f| %>
+              <%= f.select :production_status, [['着手不可',"impossible"], ['制作待ち',"ready"], ['制作中',"make"],['制作完了',"complete"]] %>
+              <%= f.submit "更新", class: "btn btn-lg btn-success" %>
+            <% end %>
+          </td>
+        </tr>
+    </tbody>
+  <% end %>
+</table>
+
+ <table border="1">
+      <caption style="margin-rigth: auto;">請求情報</caption>
+      
+        　　<tr>
+        　　  <th style="background-color: #dcdcdc">商品合計</th>
+           　<td><%= @total.round.to_s(:delimited) %></td>
+        　　</tr>
+        　　
+        　　<tr>
+        　　  <th>配送料</th>
+            <td><%= @order.postage %></td>
+        　　</tr>
+        　　
+        　　<tr>
+        　　  <th><strong>ご請求額</strong></th>
+            <td><%= @order.total_payment %></td>
+        　　</tr>
     </table>
     
