--- a/app/views/customer/orders/confirm.html.erb
+++ b/app/views/customer/orders/confirm.html.erb
@@ -18,13 +18,13 @@
           <%= cart_items.item.name %>
         </td>
         <td>
-          <%= cart_items.item.price * 1.1.round %>
+          <%= (cart_items.item.price * 1.1).round %>
         </td>
         <td>
           <%= cart_items.quantity %>
         </td>
         <td>
-          <%= cart_items.item.price * 1.1.round * cart_items.quantity %>
+          <%= (cart_items.item.price * 1.1).round * cart_items.quantity %>
         </td>
       </tr>
     <% end %>
