--- a/app/views/customer/cart_items/index.html.erb
+++ b/app/views/customer/cart_items/index.html.erb
@@ -22,7 +22,7 @@
           <%= cart_items.item.name %>
         </td>
         <td>
-          <%= cart_items.item.price * 1.1.round %>
+          <%= (cart_items.item.price * 1.1).round %>
         </td>
         <td>
            <%= form_with model:cart_items, url:cart_item_path(cart_items.id), method: :patch, local:true do |f| %>
@@ -31,7 +31,7 @@
            <% end %>
         </td>
         <td>
-          <%= cart_items.item.price * 1.1.round * cart_items.quantity %>
+          <%= (cart_items.item.price * 1.1).round * cart_items.quantity %>
         </td>
         <td>
           <%= link_to '削除する', cart_item_path(cart_items.id), method: :delete, "date-confirm" => "本当に削除しますか", class: "btn btn-danger" %>
@@ -48,5 +48,15 @@
      <div>
        <%= link_to '情報入力に進む', new_order_path, class:'btn btn-success' %>
      </div>
-     
-     ¥<%= @total.round.to_s(:delimited) %>
+
+<table style="margin-left: 20%;margin-right: 15%;">
+  <tr class="border border-solid">
+    <th style="background-color:#dcdcdc;padding:30px;border-bottom: solid 1px #696969;">
+      合計金額
+    </th>
+    <td>
+      <%= (@total* 1.1).round %>
+    </td>
+  </tr>
+</table>
+
