--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <body class="d-flex flex-column vh-100">
     <header class = "shadow-sm">
       <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container">
+        <div class="container"><%= link_to 'ロゴ', root_path %>
           <div class="ml-auto">
             <ul class="navbar-nav ml-auto">
             <% if customer_signed_in? %>
