--- a/app/views/customer/cart_items/index.html.erb
+++ b/app/views/customer/cart_items/index.html.erb
@@ -22,7 +22,7 @@
           <%= cart_items.item.name %>
         </td>
         <td>
-          <%= cart_items.item.price * 1.1.round %>
+          <%= (cart_items.item.price * 1.1).round %>
         </td>
         <td>
            <%= form_with model:cart_items, url:cart_item_path(cart_items.id), method: :patch, local:true do |f| %>
@@ -31,7 +31,7 @@
            <% end %>
         </td>
         <td>
-          <%= cart_items.item.price * 1.1.round * cart_items.quantity %>
+          <%= (cart_items.item.price * 1.1).round * cart_items.quantity %>
         </td>
         <td>
           <%= link_to '削除する', cart_item_path(cart_items.id), method: :delete, "date-confirm" => "本当に削除しますか", class: "btn btn-danger" %>
@@ -49,8 +49,8 @@
      <div>
       <%= link_to '買い物を続ける', root_path, class:'btn btn-primary' %>
      </div>
-     
+
      <div>
        <%= link_to '情報入力に進む', new_order_path, class:'btn btn-success' %>
      </div>
-     
+
